force-app/main/default/objects/Resource__c/validationRules/End_Date_must_be_a_Weekday.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_must_be_a_Weekday</fullName>
    <active>true</active>
    <description>End_Date__c must be a weekday, and must be greater than Start_Date__c.</description>
    <errorConditionFormula>(WEEKDAY( End_Date__c ) == 1)  || (WEEKDAY( End_Date__c ) == 7)
  || (End_Date__c  &lt; Start_Date__c)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End_Date__c must be a weekday, and must be greater than Start_Date__c.</errorMessage>
</ValidationRule>