force-app/main/default/objects/Resource__c/validationRules/Start_Date_must_be_a_Weekday.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_must_be_a_Weekday</fullName>
    <active>true</active>
    <description>Start_Date_must_be_a_Weekday, and must be less than End_Date__c.</description>
    <errorConditionFormula>(WEEKDAY(Start_Date__c) == 1)  || (WEEKDAY(Start_Date__c) == 7)
|| (Start_Date__c &gt; End_Date__c)</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start_Date must be a Weekday, and must be less than End_Date__c.</errorMessage>
</ValidationRule>